Fix spacing issue caused by customiser height when customiser fails to load.

--- a/scss/product.scss
+++ b/scss/product.scss
@@ -1,8 +1,20 @@
+#customiser.hidden {
+
+	display: none;
+
+}
+
 @media screen and (max-width: 500px) {
 	
 	.ac-container .ac-row label .prod-set-option {
 
 		left: 50%;
+
+	}
+
+	#customiser.hidden {
+
+		display: none;
 
 	}
 
